--- a/mobile.css
+++ b/mobile.css
@@ -5,6 +5,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    max-width: 100%;
 
 }
 
@@ -14,10 +15,11 @@ body{
 
 
 .container{
-width: auto;
+width: 80%;
 /* height: 700px; */
 /* padding: 2em; */
-margin: 2em;
+/* margin: 2em; */
+margin: 0 auto;
 display: flex;
 justify-content: center;
 align-items: center;
